Fix: profile description field height jumping (#1905)

--- a/modules/users/client/less/profile-edit.less
+++ b/modules/users/client/less/profile-edit.less
@@ -11,7 +11,7 @@
   color: @text-color;
 }
 
-.profile-edit-description {
+.profile-edit-description.medium-editor-element {
   &,
   &:focus {
     min-height: 150px;
